# tasking-manager

./: .coveragerc  .dockerignore  .ebignore  .env  .flake8  .flaskenv  .gitignore  .gitlab-ci.yml  .gitmodules  .jfconfig  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ops  Dockerrun.aws.json  Doxyfile  Identify Task in project validated by (new) mapper in iDeditor  Justfile  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  README-OSM-ES.md  README.md  RELEASING.md  ROADMAP.md  Select a task by the number to map or validate  TODOS.md  _Dockerrun.aws.json  about.html.en.json  account-nav.html.en.json  add-layer.html.en.json  alembic.ini  ami.json  appspec.yml  apt_requirements.txt  (+48 more)
.circleci/: circleci-trigger-locally.sh  config.yaml  config.yml  rdsid.sh
.dependabot/: config.yml
.ebextensions/: aws.config  cloudwatch.config  environment.config  https.config  https_config.example
.github/: FUNDING.yml  dependabot.yml  labeler.yml  ohm.upstream-sync.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: add-version-to-db.yml  backend-build-deploy.yml  backend-build.yml  build_and_deploy_backend.yml  build_and_deploy_frontend.yml  build_ci_img.yml  cfn-validate.yml  container-image.yml  docker-image-build.yml  docker-image-push.yml  docs.yml  ecs-deploy.yml  frontend-build-deploy.yml  frontend-build.yml  frontend-deploy.yml  issue_checker.yml  issue_label.yml  label.yml  ohm.upstream-sync.yml  pr_label.yml  pr_test_backend.yml  pr_test_frontend.yml  production.yml  staging.yml  terragrunt-apply.yml  terragrunt-plan.yml  terragrunt.yml
.tx/: config
LICENSE/: index.html
about/: index.html
alembic/: env.py
alembic/versions/: 11695ee852ff_add_validator_role.py  143b8daf25cc_adding_author_in_comments_table.py  1539fa17dd21_added_priority_area_table.py  1805eda2bbfa_added_prev_state_column.py  1a29f9f5c21c_create_done_and_validated_columns.py  1bdc819ae210_adding_experienced_mapper_role.py  1deb5a0b6167_added_message_table.py  336f4518e8e6_change_integer_to_float_for_done_.py  33a5ec066e1d_using_multipolygons_for_tasks.py  33e34b3beaa3_add_extra_properties_column_to_task.py  3f282468e66e_added_message_table.py  4290a873fda7_adding_lock_date_column.py  4a5bf96b558d_add_project_labels.py  4f167529e567_added_difficulty_column_to_task_table.py  4fe2d91d0354_update_user_roles.py  5002e75c0604_add_task_parent_to_retain_history_after_.py  5581aa8a3cd_add_requires_validator_role_in_project_.py  58cdd82df884_added_assign_columns.py  b54ce37bde0_added_due_state_column_to_project_table.py
backend/: __init__.py  config.py  cron.py  cron_jobs.py  db.py  error_messages.json  exceptions.py  filtered_mapswipe_stats.json  general_mapswipe_stats.json  gunicorn.py  main.py  pagination.py  routes.py
backend/api/: utils.py
backend/db/: database.py  db.py
backend/models/: __init__.py
backend/services/: application_service.py  campaign_service.py  interests_service.py  license_service.py  mapping_badges.py  mapping_issues_service.py  mapping_levels.py  mapping_service.py  mapswipe_service.py  notification_service.py  oeg_report_service.py  organisation_service.py  osm_report_service.py  overpass_service.py  partner_service.py  project_admin_service.py  project_partnership_service.py  project_search_service.py  project_service.py  recommendation_service.py  settings_service.py  stats_service.py  tags_service.py  task_annotations_service.py  team_service.py  validator_service.py
client/: .eslintrc.json  gulpfile.js  index.html  package-lock.json  package.json  taskingmanager.config.json
client/app/: custom-filters.js  taskingmanager.app.js  taskingmanager.config.js
client/locale/: bn.json  cs.json  da.json  de.json  en.json  es.json  fa_IR.json  fi.json  fr.json  gl.json  hu.json  id.json  it.json  ja.json  ko.json  lt.json  mg.json  nb.json  nl.json  nl_NL.json  pl.json  pt.json  pt_BR.json  ru.json  si.json  sl.json  ta.json  uk.json  vi.json  zh_CN.json  zh_TW.json
cloudformation/: tasking-manager.template.js
contrib/tm-training/: docker-compose.yml  openstreetmap.dockerfile  osm-entrypoint.sh
dataflow/: index.html
developers/code_of_conduct/: index.html
docs/: about.md  code_of_conduct.md  contributing-code.md  contributing-translation.md  contributing.md  customize.md  dataflow.md  deploy-aws.md  erd.md  error_code.md  frontend-development.md  index.md  infrastructure.md  localisation.md  migration-from-tm2.md  migration-tm2-to-tm3.md  migration.md  review-pr.md  running-tests.md  setup-development-faqs.md  setup-development.md  setup-docker.md  setup-live.md  validation.md  working-group.md  working-groups.md
docs-old/: contributing-code.md  contributing-translation.md  contributing.md  deploy-aws.md  error_code.md  migration.md  releases.md  review-pr.md  setup-development.md  setup-docker.md  working-groups.md
docs_old/: erd.md  error_code.md  setup-development.md
env/: pyvenv.cfg
frontend/: .env.expand  craco.config.js  entrypoint.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
infra/: .terraform.lock.hcl  README.md  ami.json  bootstrap.sh  frontend.tf  provider.tf  variables.tf
locust/: locustfile.py
migrations/: Antarctica.json  Europe.json  Oceania.json  alembic.ini  env.py
nginx/: nginx.conf
openapi/: openapi.json
osmtm/: __init__.py  geojsonencoder.py  git_cache_buster.py  i18n.py  mako_filters.py  markdown_extensions.py  models.py  resources.py  security.py  subscribers.py  tests.py  utils.py  version.py  views.py
postgres/: Dockerfile  postgresql.conf
search/: search_index.json
server/: __init__.py  config.py
task-view/: README.md  app.py  daily_stats.sh  db.py  deploy.sh  edits.py  example_daily_stats.sh  package.json  requirements.txt  run.sh  rundev.sh  runprod.sh  tunnel.sh  upload_task_edit_stats.sh  xml-dl.py  xml-info.py
tests/: task_pop.sql
validation/: index.html
working-groups/: index.html
(+5227 files in other folders)
