[project]
name = "HOTOSM Tasking Manager"
version = "0.1.0"
description = "The tool to team up for mapping in OpenStreetMap"
authors = [{ name = "HOT Sysadmin", email = "sysadmin@hotosm.org" }]
dependencies = [
    # Direct dependencies (at least one import requires it)
    "APScheduler==3.10.1",
    "alembic==1.11.1",
    "bleach==6.0.0",
    "cachetools==5.3.1",
    "Flask==2.3.2",
    "Flask-Cors==4.0.0",
    "Flask-HTTPAuth==4.8.0",
    "Flask-Migrate==4.0.4",
    "Flask-Mail==0.9.1",
    "Flask-RESTful==0.3.10",
    "Flask-SQLAlchemy==3.0.5",
    "flask-swagger==0.2.14",
    "GeoAlchemy2==0.14.1",
    "geojson==3.0.1",
    "itsdangerous==2.1.2",
    "Markdown==3.4.4",
    "oauthlib==3.2.2",
    "pandas>=2.0.2",
    "psycopg2==2.9.6",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-slugify==8.0.1",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "schematics==2.1.1",
    "scikit-learn>=1.2.2",
    "sentry-sdk[flask]==1.26.0",
    "shapely==2.0.1",
    "SQLAlchemy==2.0.19",
    "Werkzeug==2.3.6",
    # Indirect, but required dependencies (often required for efficient deployments)
    "gevent==22.10.2",
    "greenlet==2.0.2",
    "gunicorn[gevent]==20.1.0",
    # For importlib-metadata, see https://github.com/hotosm/tasking-manager/issues/5395
    "importlib-metadata==6.8.0",
    # Dependencies used by hotosm.org for production deployments
    "newrelic==8.8.0",
]
requires-python = ">=3.9,<=3.11"
readme = "README.md"
license = { text = "BSD-2-Clause" }

[tool]
[tool.pdm.dev-dependencies]
test = ["coverage==7.2.7", "pytest==7.4.0"]
lint = ["black==23.7.0", "flake8==6.1.0"]
dev = ["psycopg2-binary>=2.9.6"]

[tool.pdm.scripts]
start = "flask run --debug --reload"
migrate = "flask db migrate"
upgrade = "flask db upgrade"
downgrade = "flask db downgrade"
test = "python -m unittest discover"
lint = "black manage.py backend tests migrations"
flake8 = "flake8 manage.py backend tests migrations"
coverage-discover = "coverage run -m unittest discover"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
