[project]
name = "TaskingManager"
version = "0.1.0"
description = "The tool to team up for mapping in OpenStreetMap"
authors = [{ name = "HOT Sysadmin", email = "sysadmin@hotosm.org" }]
readme = "README.md"
license = { text = "BSD-2-Clause" }
requires-python = ">=3.9,<=3.11"
dependencies = [
    # Direct dependencies (at least one import requires it)
    "APScheduler==3.10.1",
    "alembic==1.11.1",
    "asyncpg==0.29.0",
    "bleach==6.0.0",
    "cachetools==5.3.1",
    "fastapi==0.108.0",
    "GeoAlchemy2==0.14.3",
    "geojson==3.1.0",
    "itsdangerous==2.1.2",
    "loguru==0.7.2",
    "Markdown==3.4.4",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "pandas==2.2.2",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pyinstrument==4.6.2",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-slugify==8.0.1",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "scikit-learn==1.4.2",
    "sentry-sdk[fastapi]==1.26.0",
    "shapely==2.0.1",
    "SQLAlchemy==2.0.19",
    "typing-extensions==4.8.0",
    "uvicorn==0.19.0",
    "Werkzeug==2.3.6",
    # Indirect, but required dependencies (often required for efficient deployments)
    "gevent==23.9.0",
    "greenlet==2.0.2",
    "gunicorn[gevent]==20.1.0",
    "httptools>=0.6.4",
    "uvloop>=0.21.0",
    # For importlib-metadata, see https://github.com/hotosm/tasking-manager/issues/5395
    "importlib-metadata==6.8.0",
    # Dependencies used by hotosm.org for production deployments
    "newrelic==8.8.0",
    "databases>=0.9.0",
    "fastapi-mail==1.4.1",
    "aiocache>=0.12.3",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
[dependency-groups]
dev = [
    "pyinstrument>=4.6.2",
    "debugpy==1.8.1"
]
lint = [
    "black>=25.1.0",
    "flake8>=7.2.0",
]
test = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
]

[tool]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
